--- a/day2_23_09_2017.md
+++ b/day2_23_09_2017.md
@@ -2,7 +2,7 @@ Day 2...
 
 Today we learnt about CSS
 
-We looked at csszengarden.com to show how CSS can change the entire look of a website. This is my favourite:
+We looked at csszengarden.com to show how CSS can change the entire look of a website. I was amazed at how different they all looked, I've done a lot of exercises on CSS online previously, but these exercises were: "make the border 1px solid green"  This is my favourite:
 
 http://csszengarden.com/215/
 
@@ -14,4 +14,6 @@ selector{
     property: value;
 }
 
-Today's class has taught me a lot more about design and how importnat it is - I'll never look at a website in the same way again!
+I understand why we give HTML tags classes. As my teacher said keep it DRY - Don't Repeat Yourself!
+
+Today's class has taught me a lot more about design and how important it is - I'll never look at a website in the same way again!
