--- a/day2_23_09_2017.md
+++ b/day2_23_09_2017.md
@@ -2,7 +2,7 @@ Day 2...
 
 Today we learnt about CSS
 
-We looked at csszengarden.com to show how CSS can change the entire look of a website. I was amazed at how different they all looked, I've done a lot of exercises on CSS online previously, but these exercises were: "make the border 1px solid green"  This is my favourite:
+We looked at csszengarden.com to show how CSS can change the entire look of a website. I was amazed at how different they all looked, I've done a lot of CSS exercises online previously, but these exercises were: "make the border 1px solid green", hard to translate it to 'real' web design. This is my favourite page on csszengarden.com:
 
 http://csszengarden.com/215/
 
@@ -14,6 +14,10 @@ selector{
     property: value;
 }
 
-I understand why we give HTML tags classes. As my teacher said keep it DRY - Don't Repeat Yourself!
+What else did I learn..?
+
+Eric Meyer's reset - thank you Eric Meyer! No online course has taught me this, this is one of the benefits of having proper tuition, you learn time-saving tips like this. There is nothing wrong with learning online, some of the free courses are amazing for learning rules but nothing beats knowledge handed-down from someone with years of experience.
+
+Now I get why we give HTML tags classes, it avoids repetition in CSS. As my teacher said keep it DRY - Don't Repeat Yourself!
 
 Today's class has taught me a lot more about design and how important it is - I'll never look at a website in the same way again!
