--- a/day3_07_10_2017.md
+++ b/day3_07_10_2017.md
@@ -4,10 +4,11 @@ I've spent the last week looking at every website in a whole new light, using th
 
 I see design inspiration whever I look: restuarants, tube stations, other websites. I'm thinking of colours, textures, patterns, fonts. If I see something that inspires me, I start thinking of what colours will compliment it? Wow, I'm sounding like a designer! I am so excited about starting this next phase of my life.
 
-Today we learnt about positioning (do not build layouts with positioning - use flex-box instead wherever possible). I found positioning difficult, I can't remember the values so I will add these to my cheat-sheet as they are used for Navigations.
+Today we learnt about positioning (do not build layouts with positioning - use flex-box instead wherever possible). Lots of different values, I will have to study these more at home to understand what they do.
 
-The element is relative to its ORIGINAL position
-    position: relative;
+Then...drumroll... we starting working on our 1st project!!
+I had to draw a wireframe and show it to the teacher, then start to build it. I was upset when it was time to go home as I was enjoying it so much, seeing my idea come to life on the screen. I will continue to work on it in the next week
+
 
     
 
